...
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MuteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Mute"
                    android:textColor="@color/CardViewTextColor"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/mutebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/CardViewColor"
                    card_view:srcCompat="@drawable/speaker" />

                <LinearLayout
...
