...
                    android:layout_height="match_parent"
                    android:alpha="0.45"
                    android:src="@drawable/backseatred"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/HandlerBtn"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/CardViewColor"
                    android:clickable="true"
...
